[profile.release]
opt-level = 3
debug = true
lto = 'thin'
panic = 'abort'

[workspace]
members = [
    'advent',
    'advent_macro',
    'eight',
    'eleven',
    'five',
    'four',
    'nine',
    'one',
    'parse',
    'parse_macro',
    'seven',
    'six',
    'ten',
    'three',
    'twelve',
    'two',
]
