[profile.release]
opt-level = 3
debug = true
lto = 'thin'
panic = 'abort'

[workspace]
members = [
    'advent',
    'advent_macro',
    'eight',
    'eleven',
    'five',
    'four',
    'fourteen',
    'nine',
    'one',
    'parse',
    'parse_macro',
    'seven',
    'six',
    'ten',
    'thirteen',
    'three',
    'twelve',
    'two',
]
